2025-09-04T01:23:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17450491535 # 756
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-04
* notice: last 14d: unq all: 6 1666
* notice: prev accum: outdated-unq outdated-all / unq all: 2783 266858 / 2812 268597
* notice: next accum: outdated-unq outdated-all / unq all: 2785 266982 / 2814 268722
* notice: prev exec diff / last date diff / accum: unq all: +2 +125 -1 -74 / +2 +125 -0 -0 / 2 125
* notice: removed / changed dates: [2025-08-20] / [2025-08-21 2025-09-03]

2025-09-03T01:23:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17420259218 # 755
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-03
* notice: last 14d: unq all: 6 1667
* notice: prev accum: outdated-unq outdated-all / unq all: 2781 266735 / 2812 268501
* notice: next accum: outdated-unq outdated-all / unq all: 2783 266858 / 2812 268597
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -1 -72 / +2 +124 -0 -0 / 2 124
* notice: removed / changed dates: [2025-08-19] / [2025-08-20 2025-09-02]

2025-09-02T01:37:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17390756653 # 754
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-02
* notice: last 14d: unq all: 6 1696
* notice: prev accum: outdated-unq outdated-all / unq all: 2779 266615 / 2810 268364
* notice: next accum: outdated-unq outdated-all / unq all: 2781 266735 / 2812 268501
* notice: prev exec diff / last date diff / accum: unq all: +2 +137 -1 -70 / +2 +28 -0 -0 / 2 28
* notice: removed / changed dates: [2025-08-18] / [2025-08-19 2025-09-01 2025-09-02]

2025-09-01T01:49:22Z: