@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-23T01:27:29Z",
-  "count" : 125,
+  "timestamp" : "2025-09-05T01:25:52Z",
+  "count" : 52,
   "count_minmax" : [ 28, 125 ],
-  "count_decinc" : [ -0, +125 ],
-  "uniques" : 3,
+  "count_decinc" : [ -73, +125 ],
+  "uniques" : 2,
   "uniques_minmax" : [ 2, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "uniques_decinc" : [ -1, +3 ]
 }
