@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2025-09-05T01:25:52Z",
+  "count" : 125,
+  "count_minmax" : [ 125, 125 ],
+  "count_decinc" : [ -0, +125 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
+}
