@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-09-04T01:23:30Z",
-  "count_outdated" : 266982,
-  "uniques_outdated" : 2785,
-  "count" : 268722,
-  "uniques" : 2814,
+  "timestamp" : "2025-09-05T01:25:52Z",
+  "count_outdated" : 267106,
+  "uniques_outdated" : 2787,
+  "count" : 268847,
+  "uniques" : 2816,
   "clones" : [
     {
-      "timestamp": "2025-08-21T00:00:00Z",
-      "count": 50,
-      "count_minmax": [ 50, 124 ],
-      "count_decinc": [ 76, 126 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2025-08-22T00:00:00Z",
-      "count": 125,
+      "count": 52,
       "count_minmax": [ 28, 125 ],
-      "count_decinc": [ 0, 125 ],
-      "uniques": 3,
+      "count_decinc": [ 73, 125 ],
+      "uniques": 2,
       "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "uniques_decinc": [ 1, 3 ]
     },
     {
       "timestamp": "2025-08-23T00:00:00Z",
@@ -124,6 +115,15 @@
     },
     {
       "timestamp": "2025-09-03T00:00:00Z",
+      "count": 125,
+      "count_minmax": [ 125, 125 ],
+      "count_decinc": [ 0, 125 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-09-04T00:00:00Z",
       "count": 125,
       "count_minmax": [ 125, 125 ],
       "count_decinc": [ 0, 125 ],
